infra/k8s/users-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: moeedhyg/shop-users
---
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  selector:
    app: users
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
