infra/k8s/users-postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-postgres
  template:
    metadata:
      labels:
        app: users-postgres
    spec:
      containers:
        - name: users-postgres
          image: postgres

---
apiVersion: v1
kind: Service
metadata:
  name: users-postgres-srv
spec:
  selector:
    app: users-postgres
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
